<resources>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_register_team_account">Register Team Account</string>
    <string name="action_no_account">Don\'t have a team account? Create one!</string>
    <string name="action_already_own_account">Already have an account? Sign in</string>
    <string name="action_use_without_account">Use offline without account</string>
    <string name="action_use_offline">Use offline</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_reset_password">Reset Password</string>

    <string name="confirm_use_offline_account">Are you sure you want to use an offline Account?</string>
    <string name="confirm_use_offline_account_desc">By using an offline account you won\'t be able to synchronize your tournaments between your devices. Also, if you decide to later use an online account you will have to migrate your data manually!</string>
    <string name="confirm_sign_out">Are you sure you want to Sign Out?</string>
    <string name="confirm_sign_out_desc">No data will be list in the process!</string>
    <string name="confirm_account_delete">Are you absolutely sure oyu want to delete your account?</string>
    <string name="confirm_account_delete_desc">All data, synchronized between all your devices will be lost!</string>

    <!-- Login/Register Errors Password -->
    <string name="error_invalid_team_number">Team Number is invalid</string>
    <string name="error_invalid_team_name">Team Name can\'t be empty</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_confirm_password">The two passwords do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_register_failed">Registration failed</string>

    <!-- Reset Password -->
    <string name="reset_password_sending">Sending reset email</string>
    <string name="reset_password_email_sent">Email has been sent!</string>
    <string name="reset_password_email_not_sent">The email could not be sent!</string>

    <!-- Providers -->
    <string name="account_provider_google">Google</string>
    <string name="account_provider_google_sign_in_failure">Signing in with Google Account Failed</string>
    <string name="account_provider_google_link_success">Linking with Google Account Succeeded</string>
    <string name="account_provider_google_link_failure">Linking with Google Account Failed</string>

    <!-- Intro -->
    <string name="intro_title_1">Manage Teams &amp; Matches</string>
    <string name="intro_title_2">Instant Synchronization</string>
    <string name="intro_title_3">Team Rankings</string>
    <string name="intro_desc_1">Calculate the predicted score of teams and see quickly in which matches to play</string>
    <string name="intro_desc_2">Allows instant synchronization between all the users using the same account</string>
    <string name="intro_desc_3">Fast and accurate rankings for semi-finals using the OPR Algorithm</string>

    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="agree_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="read_terms_and_conditions">Read the Terms and Conditions</string>
    <string name="accept_terms_and_conditions">Please accept the Terms and Conditions</string>
</resources>
