<?xml version="1.0" encoding="utf-8"?>
<com.heinrichreimersoftware.materialintro.view.parallax.ParallaxLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/mi_baseline"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:viewBindingIgnore="true">

    <TextView
        android:id="@id/mi_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mi_baseline"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/terms_and_conditions"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_parallaxFactor="0.5" />

    <TextView
        android:id="@+id/tv_open_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mi_baseline"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/read_terms_and_conditions"
        android:textColor="@android:color/holo_blue_dark" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@id/mi_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mi_baseline"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/agree_terms_and_conditions"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="17sp"
        app:layout_parallaxFactor="0.4"
        tools:ignore="UnusedAttribute" />

</com.heinrichreimersoftware.materialintro.view.parallax.ParallaxLinearLayout>